<?xml version="1.0"?>
<package format="2">
  <name>mydynamixel_for_ros</name>
  <version>0.0.0</version>
  <description>mydynamixel for ROS</description>
  <maintainer email="arai261@stu.kanazawa-u.ac.jp">fal2bro</maintainer>
  
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>dynamixel_sdk</build_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>mydynamixel</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
